Configs (#2)
* Live reload working with cmd folder
* 2 app entry points, gRPC and RESTful
